small fix to homepage on mobile to prevent overflow scroll on small screen

--- a/sass/site/_home.scss
+++ b/sass/site/_home.scss
@@ -128,7 +128,9 @@ html.ie8 .cover-overview{
 $theme_grid_bp : '760px';
 
 .hp-themes {
-	padding-top:20px;
+	@include mq(760px){
+		padding-top:20px;
+	}
 }
 
 .hp-themes-header {
@@ -396,6 +398,8 @@ $theme_grid_bp : '760px';
 	.portfolio-h-outer {
 		margin-bottom: 0px;
 		max-width: 800px;
+		width: 100%;
+		margin: 0 auto;
 	}//portfolio-h-outer
 
 	.portfolio-h-inner {
